--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "firebase": "^11.0.2",
+    "msw": "^2.6.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -40,5 +41,10 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.4.2"
+  },
+  "msw": {
+    "workerDirectory": [
+      "src"
+    ]
   }
 }
