--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "firebase": "^11.0.2",
-    "msw": "^2.6.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -40,11 +39,12 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "msw": "^2.6.6",
     "typescript": "~5.4.2"
   },
   "msw": {
     "workerDirectory": [
-      "src"
+      "./src"
     ]
   }
 }
