--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,8 @@ yarn-error.log
 /libpeerconnection.log
 testem.log
 /typings
-/src/environments/
+/src/environments/.env
+/src/environments/environment*.ts
 
 # System files
 .DS_Store
