Updates for secrets in yaml file

--- a/angular.json
+++ b/angular.json
@@ -33,8 +33,7 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": [],
-            "baseHref": "https://girutox.github.io/kanban-test-project/"
+            "scripts": []
           },
           "configurations": {
             "production": {
