--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "config": "ts-node src/environments/set-env.ts",
-    "build": "npm run config && ng build --base-href /kanban-test-project/",
+    "build": "ng build --base-href /kanban-test-project/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
