--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
       run: npm run config
 
     - name: Run tests
-      run: npm run test
+      run: npm run test -- --watch=false --browsers=ChromeHeadless
 
     - name: Build the project
       run: npm run build
