--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "config": "ts-node src/environments/set-env.ts",
     "build": "ng build --base-href /kanban-test-project/",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -34,8 +35,12 @@
     "@angular/compiler-cli": "^17.3.0",
     "@angular/localize": "^17.3.0",
     "@types/jasmine": "~5.1.0",
+    "angular-eslint": "19.0.2",
     "colors": "^1.4.0",
     "dotenv": "^16.4.7",
+    "eslint": "^9.16.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -43,8 +48,11 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "msw": "^2.6.6",
+    "prettier": "^3.4.2",
+    "prettier-eslint": "^16.3.0",
     "ts-node": "^10.9.2",
-    "typescript": "~5.4.2"
+    "typescript": "~5.4.2",
+    "typescript-eslint": "8.18.0"
   },
   "msw": {
     "workerDirectory": [
